# logisim

./: Cargo.toml  shell.nix
.cargo/: config.toml
assets/logisim/blocks/: sample1.blockdef.json
src/: fps_counter.rs  main.rs  shape_follow.rs  utils.rs
src/logic_sim/: block_label.rs  mod.rs  tests.rs
src/logic_sim/tests/: connection_values_tests.rs
src/logic_sim/tests/connection_values_tests/: get_by_index.rs  len.rs
