[package]
name = "logisim"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.0", features = ["bevy_dev_tools"] }
iyes_perf_ui = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
bevy_common_assets = { version = "0.12.0", features = ["json"] }
bevy-inspector-egui = "0.30.0"

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
